[package]
name = "hyp-ton-per"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.20"
tonic = "0.8.0"
juniper = "0.15.9"
tower = "0.4.12"
prost = "0.11.0"
juniper_hyper = "0.8.0"

tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.21"

http = "0.2.8"
http-body = "0.4.5"

[build-dependencies]
tonic-build = "0.7.0"
